# rag-agent-system

./: .README.md.swp  CLAUDE.md  README.md  __init__.py  docker-compose.yml  pyproject.toml
config/: settings.py
data/sample-docs/: ml-basics.txt  python-intro.txt  rag-overview.md
documents/: sample.txt
rag_agent_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: health_check.py  init.sql  mcp_server.py  setup.py
src/: main.py
src/agent/: __init__.py  llm_client.py
src/core/: config.py  health.py  logging.py
src/database/: connection.py  models.py
src/ingest/: __init__.py  chunker.py  embedder.py  file_watcher.py  processor.py  text_extractor.py
src/mcp_tools/: __init__.py  document_tools.py  health_tools.py  memory_tools.py  query_tools.py  server.py
src/utils/: file_utils.py  ollama_manager.py
